--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -23,15 +23,32 @@
 
         body{
         font-family: Arial, sans-serif;
-        background-color: rgb(191, 227, 180, 0.9); }
+        //background-color: rgb(74, 4, 4, 0.7); }
+
+        .flex-container {
+        display: flex;
+        height: 600px;
+        flex-flow: row wrap;
+        //background-color: rgb(252, 251, 244);
+        }
+
+        .flex-container > div {
+        background-color: #f1f1f1;
+        width: 100px;
+        margin: 10px;
+        text-align: center;
+        line-height: 75px;
+        font-size: 30px;
+}
     </style>
-</head>
-<body style="height:1500px">
+//</head>
+//< style="height:1500px">
 
 
 </head>
-    <h1> Say hi to some plants! </h1>
+
 <body>
+<h1> Say hi to some plants! </h1>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -46,6 +63,10 @@
     </div>
 </nav>
     <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty" width="500">
-
+<div class="flex-container">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+</div>
 </body>
 </html>
