--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -21,6 +21,29 @@
         margin-left: auto;
         }
 
+        h2 {
+        color: rgb(74, 4, 4);
+        opacity: 1.0;
+        font-size: 25px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-right: 25px;
+        margin-left: auto;
+        }
+
+        image {
+        margin-top:0
+        margin-bottom:5;
+        margin-right: 25px;
+        margin-left: auto;
+        max-width: 100%;
+        max-height: 100%;
+        }
+
+        caption {
+
+        }
+
         body{
         font-family: Arial, sans-serif;
         //background-color: rgb(74, 4, 4, 0.7); }
@@ -28,13 +51,17 @@
         .flex-container {
         display: flex;
         height: 600px;
-        flex-flow: row wrap;
+        //flex-flow: row wrap;
+        flex-basis:content;
+        justify-content: space-around;
+        align-items: flex-start;
         //background-color: rgb(252, 251, 244);
+
         }
 
         .flex-container > div {
         background-color: #f1f1f1;
-        width: 100px;
+        width: 150px;
         margin: 10px;
         text-align: center;
         line-height: 75px;
@@ -45,7 +72,7 @@
 //< style="height:1500px">
 
 
-</head>
+
 
 <body>
 <h1> Say hi to some plants! </h1>
@@ -64,9 +91,11 @@
 </nav>
     <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty" width="500">
 <div class="flex-container">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
+    <div>  <h2> Post 1 </h2>
+        <image> <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty" width="500"></image>
+    </div>
+    <div> <h2> Post 2 </h2></div>
+    <div> <h2> Post 3 </h2></div>
 </div>
 </body>
 </html>
