--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -27,8 +27,18 @@
         font-size: 25px;
         margin-top: 5px;
         margin-bottom: 5px;
-        margin-right: 25px;
-        margin-left: auto;
+        margin-left: 20px;
+        text-align: left;
+        }
+
+        h3 {
+        color: rgb(74, 4, 4);
+        opacity: 1.0;
+        font-size: 20px;
+        margin-top: 3px;
+        margin-bottom: 3px;
+        margin-left: 15px;
+        text-align: left;
         }
 
         img {
@@ -40,7 +50,8 @@
         max-height: 100%;
         }
 
-        caption {
+        button1 {
+
 
         }
 
@@ -50,10 +61,12 @@
 
         .flex-container {
         display: flex;
+        flex-wrap: wrap;
+
         height: content;
         flex-direction: row;
         //flex-flow: row wrap;
-        flex-basis:content;
+        flex-basis:100%;
         justify-content: space-around;
         align-items: flex-start;
         //background-color: rgb(252, 251, 244);
@@ -94,10 +107,13 @@
 <div class="flex-container">
     <div>  <h2> Post 1 </h2>
         <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty">
-        <body> Forgot to water him for 3 months :/</body>
+        <h3> Forgot to water him for 3 months :/</h3>
     </div>
     <div> <h2> Post 2 </h2></div>
     <div> <h2> Post 3 </h2></div>
+    <div> <h2> Post 4</h2>
+        <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty"></div>
+    <div> <h2> Post 5</h2></div>
 </div>
 </body>
 </html>
