--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>PlantBook: Main Feed</title>
@@ -105,9 +106,10 @@
 </nav>
 <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty">
 <div class="flex-container">
-    <div>  <h2> Post 1 </h2>
-        <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty">
-        <h3> Forgot to water him for 3 months :/</h3>
+    <div th:each = "plantPost:${PlantName}" th:each = "capt:${Caption}" th:each = "image:${PhotoURL}">
+        <h2 th:each = "${plantPost.getPlantName()}"> </h2>
+        <img th:each = "${image.getPhotoURL()}" >
+        <h3 th:each = "${capt.getCaption()}"> </h3>
     </div>
     <div> <h2> Post 2 </h2></div>
     <div> <h2> Post 3 </h2></div>
