--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -108,9 +108,9 @@
 <div class="flex-container">
 
     <div th:each = "plantPost:${posts}">
-        <h2 th:text = "${plantPost.getPlantName()}">Plant Name </h2>
-        <img th:text = "${plantPost.getPhotoURL()}" >
-        <h3 th:text = "${plantPost.getCaption()}">Caption </h3>
+        <h2 th:text = "${plantPost.PlantName}">Plant Name </h2>
+        <img th:src = "${plantPost.PhotoUrl}" >
+        <h3 th:text = "${plantPost.Caption}">Caption </h3>
     </div>
 
     <div> <h2> Post 2 </h2></div>
