ready for database upload button redirects

--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -100,7 +100,7 @@
             <li class="active"><a href="#">Feed</a></li>
             <li><a href="#">Personal</a></li>
             <li><a href="#">Profile</a></li>
-            <li><a href="#">Upload</a></li>
+            <li><a href="/uploadPage">Upload</a></li>
         </ul>
     </div>
 </nav>
