delete post button wip

--- a/src/main/resources/templates/uploadPage.html
+++ b/src/main/resources/templates/uploadPage.html
@@ -69,6 +69,13 @@
         <button class="submitButton" type="submit">Upload Post</button>
     </div>
 
+    // delete post button WIP
+    <button onclick="deletePost()"/>button>
+    <script>
+        function deletePost(){
+        this.getPostID.deletePosts();
+        } </script>
+
 </form>
 </div>
 </body>
