--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -15,7 +15,7 @@
         h1 {
         color: rgb(74, 4, 4);
         opacity: 0.7;
-        font-size: 30px;
+        font-size: 50px;
         margin-top: 60px;
         margin-bottom: 50px;
         margin-right: 35px;
@@ -49,6 +49,23 @@
         margin-left: auto;
         max-width: 100%;
         max-height: 100%;
+        }
+
+        .banner {
+        background-image: url('https://i.etsystatic.com/34466454/r/il/fcfeda/3771147591/il_fullxfull.3771147591_89li.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        width: 100vw;
+        max-height: 450px;
+        }
+
+        .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         }
 
         button1 {
@@ -105,6 +122,9 @@
     </div>
 </nav>
 <img src="https://succulentsplanet.com/wp-content/uploads/2021/01/Copy-of-Copy-of-Untitled-1.jpg" alt="planty">
+<div class="banner">
+    <div class="centered">Welcome to the Feed!</div>
+</div>
 <div class="flex-container">
 
     <div th:each = "plantPost:${posts}">
