--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -63,9 +63,12 @@
 
         .centered {
         position: absolute;
-        top: 50%;
+        top: 30%;
         left: 50%;
         transform: translate(-50%, -50%);
+        color: rgb(4, 74, 9);
+        opacity: 1.0;
+        font-size: 45px;
         }
 
         button1 {
