--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -94,13 +94,32 @@
 
         }
 
-        .flex-container > div {
-        background-color: #f1f1f1;
-        width: 30%;
-        margin: 10px;
-        text-align: center;
-        line-height: 75px;
-        font-size: 30px;
+        .topnav input[type=text] {
+        float: right;
+        padding: 6px;
+        border: none;
+        margin-top: 8px;
+        margin-right: 16px;
+        font-size: 17px;
+        }
+
+        @media screen and (max-width: 600px) {
+        .topnav a, .topnav input[type=text] {
+            float: none;
+            display: block;
+            text-align: left;
+            width: 100%;
+            margin: 0;
+            padding: 14px;
+        }
+        .topnav input[type=text] {
+            border: 1px solid #ccc;
+        }
+        .search_bar input[type="text"]{
+        position:relative;  
+        left:20%;
+        top:25%;
+        width:30%;
 }
     </style>
     </head>
@@ -121,6 +140,7 @@
             <li><a href="#">Profile</a></li>
             <li><a href="/uploadPage">Upload</a></li>
         </ul>
+        <input type="text" placeholder="Search..">
     </div>
 </nav>
 <div class="banner">
