search bar changes

--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -105,7 +105,7 @@
 
         @media screen and (max-width: 600px) {
         .topnav a, .topnav input[type=text] {
-            float: none;
+            float: right;
             display: block;
             text-align: left;
             width: 100%;
@@ -117,9 +117,9 @@
         }
         .search_bar input[type="text"]{
         position:relative;  
-        left:20%;
-        top:25%;
-        width:30%;
+        left:30%;
+        top:35%;
+        width:40%;
         }
 }
     </style>
