--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,3 +9,33 @@
     <p>Get your greeting <a href="/hello">here</a></p>
 </body>
 </html>
+<script type="text/javascript">
+
+    var config = {
+        type: Phaser.AUTO,
+        width: 800,
+        height: 600,
+        scene: {
+            preload: preload,
+            create: create,
+            update: update
+        }
+    };
+
+    var game = new Phaser.Game(config);
+
+    function preload ()
+    {
+    }
+
+    function create ()
+    {
+    }
+
+    function update ()
+    {
+    }
+
+
+
+</script>
